# django-drf-stater-template

./: .gitignore  pyproject.toml
_environment/: .env.example
_library/functions/: __init__.py  number_utils.py  string_utils.py  timestamp_utils.py  validate_foreign_key.py
apps/common/functions/: request_log.py
config/: env.py  environment.py  settings.py
config/django/: authentication.py  base.py  cache.py  database.py  documentation.py  installed_apps.py  logging.py  middleware.py  rest_framework.py  security.py  sessions.py  static.py  templates.py  time_zone.py  validators.py
env/: .env.example
readme/: COMMAND.md  POETRY.md
routes/: urls.py
