[tool.poetry]
name = "django template"
version = "0.0.0.1"
description = "This is a comprehensive django template"
authors = ["Sazzad Hossen <mshossen75@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.1"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
django-environ = "^0.12.0"
django-debug-toolbar = "^6.1.0"
whitenoise = "^6.11.0"
djangorestframework = "^3.16.1"
django-filter = "^25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
